ct-transpiler/testsuite/bad/PieceNoCategory/PieceNoCategory.hs
{-# LANGUAGE ComposableTypes #-}

module PieceNoCategory where

data piece Expr ==> Value = Const Int
